# GermzSurvivor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO
res/: game.gpl  perks.gpl  sprite.gpl  sprite.plt  survivor.gpl  survivor_hud.gpl
res/music/: dead_hare.mod  game.mod  intro.mod  menu.mod
src/: assets.c  assets.h  cutscene.c  cutscene.h  fade.c  game.c  game.h  game_math.c  game_math.h  hi_score.c  hi_score.h  menu.c  menu.h  pause.c  pause.h  perks.c  perks.h  splash.c  splash.h  survivor.c  survivor.h
src/comm/: button.c  button.h  comm.c  comm.h
